--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-      <title>Portfolio</title>
-      <%- include('./partials/head.ejs') %>
+      <title>Home</title>
+
+        <link rel="stylesheet" href="../font/bootstrap-icons.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+        <link href="../css/home/header.css" rel="stylesheet">
+        <link href="../css/home/navbar.css" rel="stylesheet">
+
     </head>
    
     <body class="position-relative" data-bs-spy="scroll"> 
