--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,5 +18,18 @@
          
       </div>
         <%- include('./partials/scripts.ejs') %>
+
+        <script>
+          var typed = new Typed(".aboutMe", {
+            strings: <%- JSON.stringify(array) %>, 
+            smartBackspace: true,
+            typeSpeed: 100,
+            backSpeed: 100,
+            loop: true,
+            loopCount: Infinity,
+            startDelay: 1000
+        });
+      </script>
+
     </body>
 </html>
