--- a/views/recommendations.ejs
+++ b/views/recommendations.ejs
@@ -4,8 +4,8 @@
       <title>Portfolio</title>
       <link rel="stylesheet" href="../font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
-  <link href="../css/reccommendations/carousel.css" rel="stylesheet">
-  <link href="../css/reccommendations/navbar.css" rel="stylesheet">
+  <link href="../css/recommendations/carousel.css" rel="stylesheet">
+  <link href="../css/recommendations/navbar.css" rel="stylesheet">
     </head>
    
     <body class="position-relative" data-bs-spy="scroll"> 
@@ -13,7 +13,7 @@
       <%- include('./partials/navbar.ejs') %>
       <div data-spy="scroll" data-target="#navbar" data-offset="0">
        
-        <%- include('./partials/recommendations.ejs') %>
+        <%- include('./partials/recommendations.ejs', {data: data}) %>
        
       </div>
         <%- include('./partials/scripts.ejs') %>
