--- a/views/partials/portfolio.ejs
+++ b/views/partials/portfolio.ejs
@@ -17,7 +17,7 @@
     </div>
     <div class="row grid">
       <% cakes.forEach(function(cake){ %>
-        <div class="hide col-lg-4 col-md-6 col-sm-12 <%=cake.category%>">
+        <div class="hide col-lg-4 col-md-6 col-sm-12 "<%=cake.category%>">
           <div class="text-center">
             <img class="mb-3" src="http://localhost:8080/images/<%=cake.name%>" alt="<%=cake.alt%>" 
 style="width:100%">
